--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.1.3
+		added ability to Freeze Rows
+
 0.1.2
 		fixed issue with Font Alignment when applied directly to a cell
 		module will no longer crash when String is passed an undefined value
