--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+0.1.4
+		fixed issue where sheet would not scroll properly if Freezing both a row and a column
+		allowed for usage of color definitions in multiple formats
+
 0.1.3
 		added ability to Freeze Rows
 
