fix to merge with more than 52 columns. still need to rewrite .toExcelNum and .toExcelColRow functions to handle rows past 676 and refs with 3 or more alpha characters.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.2.6
+		fixed to merge issues after the 52nd column
+
 0.2.5
 		fixed the 2nd sort function needed for proper cell merging in all cases.
 
