--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.2.8
+		Merged pull request (https://github.com/natergj/excel4node/pull/27) from https://github.com/pookong to fix issue that would cause a numberformat to not apply to a cell
+
 0.2.7
 		fixed issue that would prevent cells to be written to columns over 702 (26^2 + 26) column AAA or higher
 		Merged pull request (https://github.com/natergj/excel4node/pull/26) from https://github.com/RafaPolit to fixe continuing issue with merging cells
