--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.2.10
+		Merged pull request (https://github.com/natergj/excel4node/pull/29) from https://github.com/atsapenko to fix issue when chaining style for date cell.
+
 0.2.9
 		Merged pull request (https://github.com/natergj/excel4node/pull/29) from https://github.com/atsapenko to add ability to set dropdown validation
 
