--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.2.17.1
+		Fixed issue where page would not scroll vertically if row was frozen
+		
 0.2.17
 		Set string function to remove characters not compatible with XMLStringifier.
 		merged pull request https://github.com/natergj/excel4node/pull/38 from https://github.com/nirarazi to add support for Right to Left languages
