--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
-0.2.19.1
+0.2.19.3
 		Added the ability to add "Protection" to Workbooks and Worksheets
+		Fixed issue where Row.Filter() would not filter the correct row if workbook opened in LibreOffice or uploaded to GoogleSheets
+		Added the .Border() function to individual cell ranges rather than requiring borders to be defined within a Style
 		
 0.2.19
 		Fixed issue that would cause Excel to crash when filtered columns were sorted
