--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 		Added the ability to add "Protection" to Workbooks and Worksheets
 		Fixed issue where Row.Filter() would not filter the correct row if workbook opened in LibreOffice or uploaded to GoogleSheets
 		Added the .Border() function to individual cell ranges rather than requiring borders to be defined within a Style
+		Added opts.allowInterrupt which will use an asynchronous forEach function in order not to block other operations if reports are being generated on the same thread as other operations.
 		
 0.2.19
 		Fixed issue that would cause Excel to crash when filtered columns were sorted
