--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+0.2.23
+		Merged https://github.com/natergj/excel4node/pull/50 from https://github.com/dmnorc to fix bug with setting size of font through Cell.Format methods.
 0.2.22
 		Added the ability to reference Cells in another sheet in validations
 		Merged pull request https://github.com/natergj/excel4node/pull/48 from https://github.com/dteunkenstt to add ability to set Cells with Boolean values
