--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.4.1
+		Fixed issue causing problems when trying to bundle
+		
 0.4.0
 		Merged pull requests 67, 59, 60, 64, 66, 67 from https://github.com/dgofman
 		Added ability to create cells with complex multiple formatting within a single cell
