--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.5.0
+		Merged pull request 74 from https://github.com/pindinz to add support for specifying specific paper size
+		
 0.4.1
 		Fixed issue causing problems when trying to bundle
 		
