--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,1 @@
-add tests for all configuration options when initializing workbook
-add tests for all configuration options when adding worksheet
-add tests for all style options
+finish writing sample.js file
