fixed some inaccuracies with the README.md file

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+1.0.2
+        Fixed some inaccuracies in the README.md file
 1.0.1
         Removed a missed remnant of old code that wasn't removed during the merge
         Excluded development tests folder from npm published code
