fixed issue with call stack being exceeded on workbook write out fixed some linting issues in sample.js updated package.json and changelog.txt

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+1.0.4
+        Fixed issue #82 which would result in call stack size being exceeded when workbook was being written
 1.0.3
         Fixed issue where border.outline property was not applying border only to cells on out the outside of the cell block
         Fixed issue where an excessive number of style xfs may have been added to styles.xml file
