updated support files added 'tmp' directory to the ignore files so that random development test scripts could be put in their without fear of forgetting to remove them prior to publishing.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+1.1.0
+        Fixed issue where defaultRowHeight set in Workbook opts was not being properly handled.
+        
 1.0.9
         Fixed issue #90 which would result in a type error being thrown if a dataValidation errorTitle was set and errorStyle was not
 
