--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+1.3.1
+        Bug fixes:
+        resolves https://github.com/natergj/excel4node/issues/148 for uncatchable thrown errors
+        resolves https://github.com/natergj/excel4node/issues/106 for incorrectly generated links
+        resolves https://github.com/natergj/excel4node/issues/147 for missing fills in conditional formatting
+
 1.3.0
         Enhancements:
         merge https://github.com/natergj/excel4node/pull/117 to add option to hide view lines
