--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
-1.3.3
+1.3.4
         Bug fixes:
+        resolved issue where if multiple conditional formatting rules were specified for a single sheet, only the first rule would apply
         resolves https://github.com/natergj/excel4node/issues/164 to resolve issue adding multiple dataValidations that did not include a formula to a single worksheet
 
         Enhancements:
